<resources>
    <string name="app_name">City Report</string>
    <string name="sim">Sim</string>
    <string name="cancelar">Cancelar</string>
    <string name="add_nota_title">Adicionar Nota</string>
    <string name="empty_not_saved">Nota não inserida devido a estar vazia! </string>
    <string name="insertNoteName">Insira o nome da Nota</string>
    <string name="insertdescription">Insira a descrição</string>
    <string name="btn_save_note">Guardar</string>
    <string name="edit_note_title">Editar Nota</string>
    <string name="save_edit_note">Guardar</string>
    <string name="clean_edit_note">Limpar</string>
    <string name="delete_note">Eliminar Nota</string>
    <string name="Titulo_Dialogo">Tem a certeza que deseja apagar a seginte nota?</string>
    <string name="entrar">Entrar</string>
    <string name="title_activity_maps">Mapa</string>
    <string name="add_report">Adicionar Report</string>
    <string name="endereco">Introduza o endereço da rua</string>
    <string name="descricao">Introduza a descrição da situação encontrada</string>
    <string name="lat" translatable="false">Latitude:</string>
    <string name="lng" translatable="false">Longitude:</string>
    <string name="data">Data:</string>
    <string name="tp_report">Tipo de Report: </string>
    <string name="notas">Notas</string>
    <string name="localizacao">Localização</string>
    <string name="cityReport">City Report</string>
</resources>